# yabai-master-stack-plugin-rs

./: .envrc  .rustfmt.toml  Cargo.toml  LICENSE.md  flake.nix  packages.nix  rust-toolchain.toml
src/: cli.rs  dry_mode.rs  initialize_logging.rs  initialize_panic_handler.rs  macros.rs  main.rs  trace_command.rs
src/cli/: cli.rs  mod.rs
src/task/: create_initialized_windows_manager.rs  handlers.rs  lock.rs  lock_file.rs  mod.rs  on_yabai_start.rs  window_created.rs  window_moved.rs  ymsp_task.rs
src/window_manager/: columnize.rs  layout.rs  layout_visibility.rs  master_window.rs  mod.rs  stack.rs  stack_window.rs  update_windows.rs  widest_window.rs  window_position.rs  yabai.rs
src/window_manager/windows/: move_window_to_stack.rs
src/yabai/: command.rs  commands.rs  config.rs  display.rs  frame.rs  mod.rs  spaces.rs  state.rs  window.rs
src/yabai/command/: config_command_type.rs  direction_selector.rs  display_command_type.rs  display_selector.rs  message.rs  message_type.rs  mod.rs  query_command_type.rs  space_selector.rs  stack_selector.rs  to_argument.rs  to_command.rs  toggle_selector.rs  window_command_type.rs  window_selector.rs
src/yabai/window_manager/: columnize.rs  ctor.rs  layout.rs  layout_visibility.rs  master_window.rs  mod.rs  stack.rs  stack_window.rs  update_windows.rs  widest_window.rs  window_position.rs  yabai.rs
src/yabai/window_manager/windows/: mod.rs  move_window_to_stack.rs
