[package]
name = "ymsp"
description = "Yabai master stack plugin"
repository = "https://github.com/TheYoxy/yabai-master-stack-plugin-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.5.8", features = ["derive"] }
clap_complete = "4.5.7"
color-eyre = "0.6.3"
fslock = "0.2.1"
homedir = "0.2.1"
human-panic = "2.0.0"
libc = "0.2.155"
log = "0.4.22"
mockall = "0.12.1"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
strip-ansi-escapes = "0.2.0"
uuid = { version = "1.9.1", features = ["serde"] }
