[package]
name = "ymsp"
description = "Yabai master stack plugin"
repository = "https://github.com/TheYoxy/yabai-master-stack-plugin-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
better-panic = "0.3"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
color-eyre = "0.6"
fslock = "0.2"
homedir = "0.3"
human-panic = "2"
libc = "0.2"
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strip-ansi-escapes = "0.2"
uuid = { version = "1", features = ["serde"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "serde",
    "time",
] }

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.21.0"
